Update feature: allow user to choose metric will be collecte

--- a/libvirt_monitoring/config.ini
+++ b/libvirt_monitoring/config.ini
@@ -7,6 +7,14 @@ password = zabbix
 hostid = 10107
 hostname = agent 01
 
+[metrics]
+diskinfo = True
+diskstats = True
+interfacestats = True
+cpustats = True
+memoryusagestats = True
+memoryresidentstats = True
+
 [thresholds]
 # cpu_load = CPU_THRESHOLD
 
