--- a/libvirt_monitoring/config.ini
+++ b/libvirt_monitoring/config.ini
@@ -16,5 +16,10 @@ memoryusagestats = True
 memoryresidentstats = True
 
 [thresholds]
-# cpu_load = CPU_THRESHOLD
-
+# Disk - number of read/write operations.
+read_requests = 500
+write_requests = 300
+# Interface - number of transmitted/received
+# megabits per seconds.
+transmitted_ps = 100
+received_ps = 100
