Update create trigger

--- a/libvirt_monitoring/config.ini
+++ b/libvirt_monitoring/config.ini
@@ -6,6 +6,12 @@ password = zabbix
 [zabbix_agent]
 hostname = agent 01
 
+[trigger]
+# evaluation period in seconds or in latest collected values (preceded by a hash mark)
+# trigger format: {<server>:<key>.count(sec)>constant}
+sec = 10m
+constant = 5
+
 [metrics]
 diskinfo = True
 diskstats = True
