--- a/libvirt_monitoring/config.ini
+++ b/libvirt_monitoring/config.ini
@@ -1,10 +1,13 @@
 [zabbix_server]
+ip = localhost
 url = http://localhost/zabbix/
+port = 10051
 user = Admin
 password = zabbix
 
 [zabbix_agent]
 hostname = agent 01
+use_config = True
 
 [trigger]
 # evaluation period in seconds or in latest collected values (preceded by a hash mark)
@@ -21,10 +24,9 @@ memoryusagestats = True
 memoryresidentstats = True
 
 [thresholds]
-# Disk - number of read/write operations.
-read_requests = 500
-write_requests = 300
-# Interface - number of transmitted/received
-# megabits per seconds.
-transmitted_ps = 100
-received_ps = 100
+# Disk - number of read/write operations per second.
+read_requests_ps = 500
+write_requests_ps = 300
+# Interface - number of transmitted/received megabits per second.
+tx_megabits_ps = 100
+rx_megabits_ps = 100
