--- a/libvirt_monitoring/logging.ini
+++ b/libvirt_monitoring/logging.ini
@@ -8,12 +8,12 @@ keys=fileHandler
 keys=fileFormatter
 
 [logger_root]
-level=DEBUG
+level=INFO
 handlers=fileHandler
 
 [handler_fileHandler]
 class=FileHandler
-level=DEBUG
+level=INFO
 formatter=fileFormatter
 args=('%(logfile)s',)
 
