--- a/libvirt_monitoring/logging.ini
+++ b/libvirt_monitoring/logging.ini
@@ -2,20 +2,26 @@
 keys=root
 
 [handlers]
-keys=fileHandler
+keys=infoHandler, errorHandler
 
 [formatters]
 keys=fileFormatter
 
 [logger_root]
 level=INFO
-handlers=fileHandler
+handlers=infoHandler, errorHandler
 
-[handler_fileHandler]
+[handler_errorHandler]
+class=FileHandler
+level=EXCEPTION
+formatter=fileFormatter
+args=('%(errorfile)s',)
+
+[handler_infoHandler]
 class=FileHandler
 level=INFO
 formatter=fileFormatter
-args=('%(logfile)s',)
+args=('%(infofile)s',)
 
 [formatter_fileFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
