--- a/libvirt_monitoring/logging.ini
+++ b/libvirt_monitoring/logging.ini
@@ -13,7 +13,7 @@ handlers=infoHandler, errorHandler
 
 [handler_errorHandler]
 class=FileHandler
-level=EXCEPTION
+level=WARNING
 formatter=fileFormatter
 args=('%(errorfile)s',)
 
