--- a/libvirt_monitoring/config.ini
+++ b/libvirt_monitoring/config.ini
@@ -31,5 +31,5 @@ memoryresidentstats = True
 read_requests_ps = 500
 write_requests_ps = 300
 # Interface - number of transmitted/received megabits per second.
-tx_megabits_ps = 100
-rx_megabits_ps = 100
+tx_megabit_ps = 100
+rx_megabit_ps = 100
