--- a/libvirt_monitoring/config.ini
+++ b/libvirt_monitoring/config.ini
@@ -1,5 +1,7 @@
 [default]
 debug = True
+error_log_file = /var/log/libvirt_agent_error.log
+info_log_file = /var/log/libvirt_agent_info.log
 
 [zabbix_server]
 ip = localhost
