--- a/libvirt_monitoring/config.ini
+++ b/libvirt_monitoring/config.ini
@@ -35,3 +35,5 @@ write_requests_ps = 300
 # Interface - number of transmitted/received megabits per second.
 tx_megabit_ps = 100
 rx_megabit_ps = 100
+r_await = 10
+w_await = 10
