--- a/libvirt_monitoring/config.ini
+++ b/libvirt_monitoring/config.ini
@@ -5,7 +5,7 @@ info_log_file = /var/log/libvirt_agent_info.log
 
 [zabbix_server]
 ip = localhost
-url = http://localhost/zabbix/
+url = http://localhost/zabbix
 port = 10051
 user = Admin
 password = zabbix
