--- a/etc/logging.ini
+++ b/etc/logging.ini
@@ -12,16 +12,16 @@ level=INFO
 handlers=infoHandler, errorHandler
 
 [handler_errorHandler]
-class=FileHandler
+class=TimedRotatingFileHandler
 level=WARNING
 formatter=fileFormatter
-args=('%(errorfile)s',)
+args=('%(errorfile)s', when='D', interval=2, backupCount=5)
 
 [handler_infoHandler]
-class=FileHandler
+class=TimedRotatingFileHandler
 level=INFO
 formatter=fileFormatter
-args=('%(infofile)s',)
+args=('%(infofile)s', when='D', interval=2, backupCount=5)
 
 [formatter_fileFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
