--- a/etc/logging.ini
+++ b/etc/logging.ini
@@ -15,13 +15,13 @@ handlers=infoHandler, errorHandler
 class=logging.handlers.TimedRotatingFileHandler
 level=WARNING
 formatter=fileFormatter
-args=('%(errorfile)s', when='D', interval=2, backupCount=5)
+args=('%(errorfile)s', 'D', 2, 5)
 
 [handler_infoHandler]
 class=logging.handlers.TimedRotatingFileHandler
 level=INFO
 formatter=fileFormatter
-args=('%(infofile)s', when='D', interval=2, backupCount=5)
+args=('%(infofile)s', 'D', 2, 5)
 
 [formatter_fileFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
